v3.8.2 (XXXX-XX-XX)
-------------------

* Fix caching of collection counts and index selectivity estimates in cluster.
  The cache values expired too early in previous versions, making the cache
  ineffective.

* Add better error message for replication request failures in case requests are
  retried.

* Make background statistics gathering more efficient by avoiding one AQL query
  every 10 seconds that fetched the most recent stats entry. Instead, buffer the
  entry in value after we have written it. Also spread out the statistics calls
  by different servers more randomly, so that request spikes are avoided for
  cluster with many coordinators that used to run their statistics queries at
  about the same time when the instances were started simultaneously.

* Fixed ES-881: Fixed LDAP global options. This needs to use the first active
  provider, not just the first provider and it should be globally disabled.

* Do not use an edge index for range queries, i.e. with the comparison operators
  `>`, `>=`, `<` or `<=`, but only for equality lookups using the `==` and `IN`
  comparison operators.
  The edge index is not fully ordered, so while using it for range queries may
  produce _some_ documents, it is possible that other documents from the range
  would be skipped.

* Fixed counting of all read transaction as aborted. Added a new metric to count
  read transactions.

* Fix windows installer PATH manipulation issue by replaceng the NSIS plugin
  (BTS-176).

* Fix race in RocksDB throttle listener, when it was getting started lazily
  during server shutdown.

* Fixed potential issues with revision trees and document counters getting out
  of sync with the underlying collection data.

* Fixed BTS-582: ArangoDB client EXE package for Windows has incorrect metadata.

* Fixed BTS-575: Windows EXE installer doesn't replace service during upgrade in
  silent (non-UI) mode.

* Fix issue #14819: Query: AQL: missing variable # for node #... location