@@ -1,6 +1,10 @@
 v3.8.2 (XXXX-XX-XX)
 -------------------
 
+* Fix a potential overwhelm situation on DB servers that can lead to no further
+  tasks being pulled from a DB servers queue even though there would still be
+  processing capacity and idle threads available.
+
 * Fix caching of collection counts and index selectivity estimates in cluster.
   The cache values expired too early in previous versions, making the cache
   ineffective.
